Update README, pom.xml. Package building